--- a/assignment1/style.css
+++ b/assignment1/style.css
@@ -1,18 +1,14 @@
 h1 {
-  color: cornflowerblue;
-}
-/* The reason I chose this styling is a s follows:
-1) I really like the cornflower blue and the purple hues that match with it. I enjoy colour schemes that remind me of the sky at twilight and sunrise
-2) I chose the courier new fontface as it is simple but always looks neat and tidy.
-3) I wanted to do a pretty background  */
-h1 {
-  font-family: "Courier New", Courier, monospace;
+  color: whitesmoke;
+  font-family: "Pirata One", system-ui;
+  font-weight: 400;
+  font-style: italic;
+  font-size: 5.5rem;
+  text-align: center;
 }
 h3 {
   font-family: "Courier New", Courier, monospace;
-}
-h3 {
-  color: cornflowerblue;
+  color: white;
 }
 p {
   color: darkslateblue;
@@ -24,5 +20,21 @@ footer {
   color: cornflowerblue;
 }
 nav {
+  text-align: center;
+  font-size: 2rem;
   font-family: "Courier New", Courier, monospace;
+}
+
+p {
+  font-family: "Courier New", Courier, monospace;
+}
+body {
+  background-image: linear-gradient(
+    to bottom,
+    #b1b2ff,
+    #ceacf4,
+    #e4a7e6,
+    #f5a3d4,
+    #ffa2c2
+  );
 }
