--- a/assignment1/style.css
+++ b/assignment1/style.css
@@ -1,19 +1,38 @@
+body {
+  background-image: linear-gradient(
+    to bottom,
+    #b1b2ff,
+    #ceacf4,
+    #e4a7e6,
+    #f5a3d4,
+    #ffa2c2
+  );
+  font-optical-sizing: auto;
+  justify-content: center;
+  align-items: center;
+}
+
 h1 {
   color: whitesmoke;
   font-family: "Pirata One", system-ui;
   font-weight: 400;
   font-style: italic;
-  font-size: 5.5rem;
+  font-size: 7rem;
   text-align: center;
 }
 h2 {
   font-family: "Courier New", Courier, monospace;
-  font-size: larger;
+  font-size: 1.5rem;
   color: white;
   font-style: italic;
-  padding: 1rem 1rem 1rem 6rem;
+  text-align: center;
+  padding-bottom: 1rem;
 }
-
+p {
+  font-family: "Courier New", Courier, monospace;
+  color: darkslateblue;
+  font-size: 1.2rem;
+}
 ul {
   color: darkslateblue;
   font-family: "Courier New", Courier, monospace;
@@ -35,25 +54,14 @@ nav {
   opacity: 50%;
 }
 
-body {
-  background-image: linear-gradient(
-    to bottom,
-    #b1b2ff,
-    #ceacf4,
-    #e4a7e6,
-    #f5a3d4,
-    #ffa2c2
-  );
-}
 a {
   color: darkslateblue;
   text-decoration: none;
 }
 
 li {
-  padding: 0.5rem;
-  padding-left: 6rem;
-  padding-bottom: 1rem;
+  padding: 5px;
+  list-style-type: none;
 }
 
 aside {
@@ -66,11 +74,74 @@ aside {
   padding-right: 1rem;
 }
 
-header {
+#grid-container {
+  justify-content: space-around;
+  align-items: baseline;
+  margin: 50px;
+  min-width: auto;
+  min-height: auto;
+  display: grid;
+  gap: 4rem;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
-div {
-  padding: 1rem 6rem 1rem 6rem;
-  font-family: "Courier New", Courier, monospace;
-  color: darkslateblue;
+#grid-container > * {
+  min-width: 100%;
+  min-height: 100%;
+  padding: 15px;
+  border: 3px dotted whitesmoke;
+}
+
+#box1 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+#box2 {
+  grid-column-start: 3;
+  grid-column-end: 5;
+}
+#box3 {
+  grid-column-start: 5;
+  grid-column-end: 7;
+}
+#box4 {
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+#box5 {
+  grid-column-start: 4;
+  grid-column-end: 7;
+}
+#box6 {
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+#box7 {
+  grid-column-start: 4;
+  grid-column-end: 7;
+}
+#box8 {
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+
+#box9 {
+  grid-column-start: 4;
+  grid-column-end: 7;
+}
+#box10 {
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+#box11 {
+  grid-column-start: 4;
+  grid-column-end: 7;
+}
+#box12 {
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+#box13 {
+  grid-column-start: 4;
+  grid-column-end: 7;
 }
