--- a/assignment2/style.css
+++ b/assignment2/style.css
@@ -57,23 +57,32 @@ body {
   font-size: 1.1rem;
 }
 
-.heading-one {
+h1 {
   font-family: "orbitron", system-ui;
   color: #ffffff;
-  font-size: 8rem;
   font-weight: 600;
   font-style: normal;
   font-size: 5rem;
   padding: 2rem;
 }
 
+h3 {
+  font-family: "orbitron", system-ui;
+  color: #ffffff;
+  font-size: 2rem;
+  font-weight: 100;
+  font-style: italic;
+  padding: 2rem;
+  opacity: 20%;
+}
+
 .outer {
   width: 90%;
   min-height: 500px;
-  padding: 10px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  /* gap: 1.5rem; */
   /* flex-wrap: wrap; */
 }
 
@@ -130,7 +139,6 @@ img {
   border: none;
   border-radius: 80%;
   align-items: center;
-  
 }
 
 .audio-controls button img {
@@ -199,4 +207,30 @@ nav ul li {
 nav a {
   text-decoration: none;
   color: var(--text-color);
+}
+
+.added-sounds button {
+  height: px;
+  background-color: #9fcbc4;
+  margin: 30px;
+  border: none;
+  text-align: center;
+  align-items: center;
+  cursor: pointer;
+  font-size: 1.2em;
+  padding: 7px;
+  width: 15%;
+}
+
+footer {
+  background-color: #04a3818a;
+  height: 50px;
+  width: 100%;
+  text-align: center;
+  padding: 15px;
+}
+
+footer a {
+  text-decoration: none;
+  color: #9fcbc4;
 }
